--- a/frontend/src/pages/ProfilePage.css
+++ b/frontend/src/pages/ProfilePage.css
@@ -45,6 +45,13 @@
     font-size: 2.5rem;
     font-weight: 700;
     color: white;
+    overflow: hidden;
+}
+
+.avatar-img-full {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .avatar-edit {
